# otpcli

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.ci/: build.sh  setup_deploy.sh  test.sh  travis.sh
.github/: dependabot.yml
.github/workflows/: build.yml  release.yaml
src/: cli.rs  config.rs  lib.rs  main.rs  secrets.rs  totp.rs
src/otpcli/: cli.rs  main.rs
