[package]
name = "otpcli"
version = "0.5.0-alpha.5"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
description = "A simple one-time-password CLI, with support for TOTP and STOKEN."
license = "MIT"
edition = "2018"
repository = "https://github.com/jakeswenson/otpcli/"

[badges]
travis-ci = {repository="jakeswenson/otpcli", branch="master"}

[lib]
name = "otp"
path = "src/lib.rs"

[[bin]]
name = "otpcli"
path = "src/main.rs"

[features]
default = ["keychain", "copy"]
keychain = ["keyring"]
copy = ["clipboard"]

[dependencies]
rust-crypto = "^0"
byteorder = "^1.2"
base32 = "^0"
toml = "^0"
serde = { version = "^1.0", features = ["derive"] }
structopt = "^0"
dirs = "^1.0"
stoken = "^0"
keyring = { version = "^0", optional = true }
clipboard = { version = "^0", optional = true }
