[package]
name = "otpcli"
version = "1.0.1-alpha.0"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
description = "A simple one-time-password CLI, with support for TOTP and STOKEN."
license = "MIT"
edition = "2018"
repository = "https://github.com/jakeswenson/otpcli/"
readme = "README.md"

[badges]
travis-ci = {repository="jakeswenson/otpcli", branch="master"}

[lib]
name = "otp"
path = "src/lib.rs"

[[bin]]
name = "otpcli"
path = "src/otpcli/main.rs"

[features]
default = ["keychain", "copy"]
keychain = ["keyring"]
copy = ["clipboard"]
rsa_stoken = ["stoken"]

[dependencies]
rust-crypto = "^0"
byteorder = "^1.4"
base32 = "^0"
toml = "^0"
serde = { version = "^1.0", features = ["derive"] }
structopt = "^0"
dirs = "^4.0"
stoken = { version = "^0", optional = true }
keyring = { version = "^0", optional = true }
clipboard = { version = "^0", optional = true }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "prepush-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1

[package.metadata.docs.rs]
no-default-features = true # copy support doesn't work
features = ["keychain"]
